syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/hello/{name}"
    };
  }

  // Sends a greeting
  rpc PostHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  Weather weather = 2;

  enum Weather {
    SUNNY = 0;
    CLOUDY = 1;
    WINDY = 2;
    RAINY = 3;
  }
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 visitCount = 2;
  Feeling feeling = 3;

  enum Feeling {
    EXCELLENT = 0;
    GOOD = 1;
    NOT_BAD = 2;
    BAD = 3;
  }
}
